--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ body{
     padding: 25px;
     background-color: rgba(251, 255, 0, 0.719);
     color: #fff;
+    border-radius: 10px;
+    box-shadow: 50px 50px 4px 15px rgba(0, 0, 0, 0.2);
 }
 
 .list-unstyled li{
@@ -33,9 +35,8 @@ body{
 
 .input-task{
     width: 100%;
-    border: none;
     padding: 5px 5px;
-
+    border: 1px solid black;
 }
 
 .task-done{
